--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
+          <li>{{ site.name }}</li>
           <li>{{ site.phone }}</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
           <li>{{ site.uid }}</li>
