--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,6 +31,11 @@
           <li>
             <a href="mailto:{{ site.email }}"><i class="fa fa-envelope"></i> {{ site.email }}</a>
           </li>
+          <li>
+            <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
+              <i class="fa fa-rss-square"></i> RSS-Feed
+            </a>
+          </li>
         </ul>
       </div>
 
