moved rss icon to footer, removed rss-link in index page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,11 +14,14 @@
       </a>
 
       <div class="trigger">
-        {% for page in site.pages %}
+        <!-- {% for page in site.pages %}
           {% if page.title %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
-        {% endfor %}
+        {% endfor %} -->
+        <a class="page-link" href="#ueberuns"> Über uns</a>        
+        <a class="page-link" href="#anfahrt"> Anfahrt</a>
+        <a class="page-link" href="#kontakt"> Kontakt</a>
       </div>
     </nav>
 
