--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
 <footer class="site-footer">
 
-  <div class="wrapper">
+  <div class="wrapper" id="kontakt">
 
     <h2 class="footer-heading">{{ site.title }}</h2>
 
     <div class="footer-col-wrapper">
-      <div class="footer-col  footer-col-1">
+      <div class="footer-col  footer-col-3">
         <ul class="contact-list">
           <li>
             {{ site.subtitle }}
@@ -20,7 +20,7 @@
         </ul>
       </div>
 
-      <div class="footer-col  footer-col-1">
+      <div class="footer-col  footer-col-3">
         <ul class="contact-list">
           <li>
             {{ site.name }}
