logo inserted in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,8 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <!-- <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a> -->
+    <a class="site-title" href="{{ site.baseurl }}/"><img src="images/logo_rot.png" width=150 height=43 /></a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -19,7 +20,7 @@
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %} -->
-        <a class="page-link" href="#ueberuns"> Über uns</a>        
+        <a class="page-link" href="#ueberuns"> Über uns</a>
         <a class="page-link" href="#anfahrt"> Anfahrt</a>
         <a class="page-link" href="#kontakt"> Kontakt</a>
       </div>
