added video to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,13 @@
 
   <div class="wrapper">
 
+    <video poster="images/logo_rot.png" autoplay="true" muted>
+      <source src="videos/Landing_video_short.mp4" type="video/mp4">
+      <source src="videos/Landing_video_short.webm" type="video/webm">
+    </video>
+
     <!-- <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a> -->
-    <a class="site-title" href="{{ site.baseurl }}/"><img src="images/logo_rot.png" width=150 height=43 /></a>
+    <a class="site-title" href="{{ site.baseurl }}/"><img src="images/logo_rot.png" width=300 height=86 /></a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
