--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,10 +4,23 @@
 .site-header {
     // border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
-
+    margin: 0;
+    padding: 0;
+    height: 100vh;
     // Positioning context for the mobile navigation icon
     position: relative;
+}
+
+video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+
 }
 
 .site-title {
