Header elements now on top of video

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <video poster="images/logo_rot.png" autoplay="true" muted>
+    <video poster="images/geschäft_panorama.png" autoplay="true" muted>
       <source src="videos/Landing_video_short.mp4" type="video/mp4">
       <source src="videos/Landing_video_short.webm" type="video/webm">
     </video>
