--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -20,10 +20,13 @@ video {
   min-height: 100%;
   width: auto;
   height: auto;
+  z-index: 1;
 
 }
 
 .site-title {
+    position: absolute;
+    z-index: 2;
     font-size: 26px;
     line-height: 56px;
     letter-spacing: -1px;
@@ -37,6 +40,8 @@ video {
 }
 
 .site-nav {
+    position: relative;
+    z-index: 2;
     float: right;
     line-height: 56px;
 
