--- a/_includes/anfahrt.html
+++ b/_includes/anfahrt.html
@@ -1,5 +1,14 @@
 <div id="anfahrt">
 
   <h1 class="page-heading">Anfahrt</h1>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15510.23193652384!2d14.005905219812643!3d46.58898369475703!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477078af06f0728f%3A0x8452d9ac2dc6edc9!2sIl+Gusto!5e0!3m2!1sen!2sat!4v1451402640059" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  <a href="https://www.google.at/maps/place/Il+Gusto/@46.5922111,14.0174463,17z/data=!4m7!1m4!3m3!1s0x477078af0747afeb:0x83a247888773d752!2sMautweg+7,+9232+Rosegg!3b1!3m1!1s0x477078af06f0728f:0x8452d9ac2dc6edc9?hl=en">
+    <i class="fa fa-map-o"></i>
+    {{ site.address }}
+  </a>
+
+  <img src="images/map_color.png">
+<!--   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15510.23193652384!2d14.005905219812643!3d46.58898369475703!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477078af06f0728f%3A0x8452d9ac2dc6edc9!2sIl+Gusto!5e0!3m2!1sen!2sat!4v1451402640059" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+-->
+
 </div>
