--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,13 +2,26 @@
 
   <div class="wrapper">
 
-    <video poster="images/geschäft_panorama.png" autoplay="true" muted>
+    <video class="landing-video" poster="images/geschäft_panorama.png" autoplay="true" muted>
       <source src="videos/Landing_video_short.mp4" type="video/mp4">
       <source src="videos/Landing_video_short.webm" type="video/webm">
     </video>
 
     <!-- <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a> -->
     <a class="site-title" href="{{ site.baseurl }}/"><img src="images/logo_rot.png" width=300 height=86 /></a>
+
+    <div class="overlay-text">
+      <ul class="contact-list">
+        <li>{{ site.opening_hours.title }}</li>
+        <li>{{ site.opening_hours.mo.title }} : {{ site.opening_hours.mo.hours }} </li>
+        <li>{{ site.opening_hours.di.title }} : {{ site.opening_hours.di.hours }} </li>
+        <li>{{ site.opening_hours.mi.title }} : {{ site.opening_hours.mi.hours }} </li>
+        <li>{{ site.opening_hours.do.title }} : {{ site.opening_hours.do.hours }} </li>
+        <li>{{ site.opening_hours.fr.title }} : {{ site.opening_hours.fr.hours }} </li>
+        <li>{{ site.opening_hours.sa.title }} : {{ site.opening_hours.sa.hours }} </li>
+      </ul>
+    </div>
+
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
