--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -93,7 +93,8 @@ a {
     text-decoration: none;
 
     &:visited {
-        color: darken($brand-color, 15%);
+        //color: darken($brand-color, 15%);
+        color: $brand-color;
     }
 
     &:hover {
@@ -156,12 +157,17 @@ pre {
 .wrapper {
     max-width: -webkit-calc(800px - (#{$spacing-unit} * 2));
     max-width:         calc(800px - (#{$spacing-unit} * 2));
-    margin: 0;
-    padding: 0;
+
     // margin-right: auto;
     // margin-left: auto;
     // padding-right: $spacing-unit;
     // padding-left: $spacing-unit;
+
+    margin-right: auto;
+    margin-left: 0;
+    padding-right: $spacing-unit;
+    padding_left: 0;
+
     @extend %clearfix;
 
     @include media-query($on-laptop) {
