--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,7 +3,7 @@
  */
 .site-header {
     // border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
+    border-bottom: 5px solid red; //$grey-color-light;
     margin: 0;
     padding: 0;
     height: 100vh;
@@ -11,8 +11,9 @@
     position: relative;
 }
 
-video {
+.landing-video {
   position: absolute;
+  overflow: hidden;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -24,8 +25,19 @@ video {
 
 }
 
+.overlay-text {
+  position: relative;
+  z-index: 2;
+  background: rgba(200,200,200,0.4);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
 .site-title {
-    position: absolute;
+    position: relative;
     z-index: 2;
     font-size: 26px;
     line-height: 56px;
