--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,7 +6,9 @@
     border-bottom: 5px solid red; //$grey-color-light;
     margin: 0;
     padding: 0;
+    width: auto;
     height: 100vh;
+
     // Positioning context for the mobile navigation icon
     position: relative;
 }
@@ -25,14 +27,42 @@
 
 }
 
+.header-flexbox-parent {
+  //border: 5px solid lightblue;
+  position: absolute;
+  margin: 10px;
+  padding: 10px;
+  z-index: 2;
+  min-width: 90%;
+  min-height: 90%;
+  width: auto;
+  //height: auto;
+  //flex stuff:
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+}
+
+.flexbox-item:nth-child(2) {
+  align-self: center;
+}
+
 .overlay-text {
   position: relative;
   z-index: 2;
-  background: rgba(200,200,200,0.4);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  background: rgba(200,200,200,0.8);
+  padding-top: 30px;
+  padding-bottom: 20px;
+  padding-left: 15px;
+  padding-right: 45px;
+  font-size: 20px;
+
+}
+
+.overlay-text-list {
+  list-style: none;
 }
 
 
