--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,40 +2,20 @@
 
   <div class="wrapper">
 
-    <video class="landing-video" poster="images/geschäft_panorama.png" autoplay="true" muted>
-      <source src="videos/Landing_video_short.mp4" type="video/mp4">
-      <source src="videos/Landing_video_short.webm" type="video/webm">
-    </video>
-
     <!-- <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a> -->
-
     <div class="header-flexbox-parent">
 
-      <div class="flexbox-item">
+      <div class="header-flexbox-item">
         <a class="site-title" href="{{ site.baseurl }}/"><img src="images/logo_rot.png" width=300 height=86 /></a>
       </div>
 
-      <div class="flexbox-item">
-        <div class="overlay-text">
-          <ul class="overlay-text-list">
-            <li>{{ site.opening_hours.title }}</li>
-            <li>{{ site.opening_hours.mo.title }} : {{ site.opening_hours.mo.hours }} </li>
-            <li>{{ site.opening_hours.di.title }} : {{ site.opening_hours.di.hours }} </li>
-            <li>{{ site.opening_hours.mi.title }} : {{ site.opening_hours.mi.hours }} </li>
-            <li>{{ site.opening_hours.do.title }} : {{ site.opening_hours.do.hours }} </li>
-            <li>{{ site.opening_hours.fr.title }} : {{ site.opening_hours.fr.hours }} </li>
-            <li>{{ site.opening_hours.sa.title }} : {{ site.opening_hours.sa.hours }} </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="flexbox-item">
+      <div class="header-flexbox-item">
         <nav class="site-nav">
           <a href="#" class="menu-icon">
             <svg viewBox="0 0 18 15">
-              <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-              <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-              <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
+              <path fill=$navbarcolor d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
+              <path fill=$navbarcolor d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
+              <path fill=$navbarcolor d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
             </svg>
           </a>
 
