--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -245,16 +245,21 @@
 .footer-flexbox-parent {
   border: 5px solid green;
   margin-left: 20px;
-  padding: 15px;
-  width: auto;
+
+  max-width: 900px;
+  margin: 0 auto;
   //z-index: 2;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-around;
   flex-wrap: wrap;
 
 }
 
+.footer-flexbox-parent {
+  padding: 20px;
+
+}
 
 @include media-query($on-palm) {
     .footer-col {
