--- a/_includes/ueberuns.html
+++ b/_includes/ueberuns.html
@@ -1,13 +1,59 @@
 <div id="ueberuns">
 
   <h1 class="page-heading">Über uns</h1>
-  Unser italienisches Feinkostgeschäft in Rosegg entstand im Mai 2010.
 
-  Eine persönliche und freundliche Bedienung liegt uns sehr am Herzen.
+  <div class="uns-flexbox-parent">
 
-  Qualitativ hochwertige Produkte betimmen unsere Palette: vom Wurstbereich über die Käsetheke, bis hin zu Feinkostprodukten und Weinen aus vielen Regionen Italiens.
+    <div class="uns-flexbox-item">
+      <div class="uns-column1">
 
-  Unser Angebot an Produkten wird von ständig wechselnden Themen und Schwerpunkten bestimmt, täglich frisches Gebäck und eine kleine Auswahl an saisonalem Obst und Gemüse runden unser Sortiment ab, so dass immer Neues und Interessantes unsere Kunden zum Genießen einlädt.
+        <a class="round-picture"><img src="images/enzo_profile.png"/></a>
 
-  Überzeugen Sie sich selbst und besuchen Sie uns einmal. Es ist immer einen Umweg wert - wir haben bestimmt auch für Ihren Geschmack das Richtige!
+        <br>
+        <br>
+        Unser italienisches Feinkostgeschäft in Rosegg entstand im Mai 2010.
+
+
+
+        Qualitativ hochwertige Produkte betimmen unsere Palette: vom Wurstbereich über die Käsetheke, bis hin zu Feinkostprodukten und Weinen aus vielen Regionen Italiens.
+
+      </div>
+    </div>
+
+
+    <div class="uns-flexbox-item">
+      <div class="uns-column2">
+
+        <a class="round-picture"><img src="images/regal2.png"/></a>
+
+        <br>
+        <br>
+        Unser Angebot an Produkten wird von ständig wechselnden Themen und Schwerpunkten bestimmt. Täglich frisches Gebäck und eine kleine Auswahl an saisonalem Obst und Gemüse runden unser Sortiment ab, so dass immer Neues und Interessantes unsere Kunden zum Genießen einlädt.
+
+        Überzeugen Sie sich selbst und besuchen Sie uns einmal!
+
+
+      </div>
+    </div>
+
+
+    <div class="uns-flexbox-item">
+      <div class="uns-column3">
+
+        <a class="round-picture"><img src="images/platte_detail4.png"/></a>
+
+        <br>
+        <br>
+        Eine persönliche und freundliche Bedienung liegt uns sehr am Herzen. Gerne stellen wir für Ihre Familien -oder Firmenfeier Platten mit ausgewählten Produkten zusammen.
+        <br>
+        <br>
+        Für Anfragen und weitere Informationen kontaktieren Sie mich bitte unter:
+        <br>
+        <a href="tel:{{ site.phone }}"><i class="fa fa-phone"></i> {{ site.phone }}</a>
+
+      </div>
+    </div>
+
+  </div>
+
 </div>
