--- a/css/main.scss
+++ b/css/main.scss
@@ -17,6 +17,7 @@ $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      rgba(235,25,35,1);
 $hover-color:      rgba(200,200,200,0.8);
+$green-color:      rgba(45,163,66,1);
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
