--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,10 @@
 
     <div class="footer-flexbox-parent">
 
-      <h2 class="footer-heading">{{ site.title }}</h2>
-
+      <div class="footer-flexbox-item">
+        <h2 class="footer-heading">{{ site.title }}</h2>
+      </div>
+      
       <div class="footer-flexbox-item">
 
         <div class="footer-col1">
