--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,12 +4,13 @@
 
     <div class="footer-flexbox-parent">
 
+
+      <div class="footer-flexbox-item">
+        <img src="images/logo_ganz.png">
+      </div>
+
       <div class="footer-flexbox-item">
         <h2 class="footer-heading">{{ site.title }}</h2>
-      </div>
-      
-      <div class="footer-flexbox-item">
-
         <div class="footer-col1">
           <ul class="contact-list">
             <li>
