--- a/_includes/ueberuns.html
+++ b/_includes/ueberuns.html
@@ -7,15 +7,15 @@
     <div class="uns-flexbox-item">
       <div class="uns-column1">
 
-        <a class="round-picture"><img src="images/enzo_profile.png"/></a>
+        <div class="round-picture">
+          <img src="images/enzo_profile.png"/>
+        </div>
 
         <br>
         <br>
         Unser italienisches Feinkostgeschäft in Rosegg entstand im Mai 2010.
 
-
-
-        Qualitativ hochwertige Produkte betimmen unsere Palette: vom Wurstbereich über die Käsetheke, bis hin zu Feinkostprodukten und Weinen aus vielen Regionen Italiens.
+        Qualitativ hochwertige Produkte bestimmen unsere Palette, vom Wurstbereich über die Käsetheke, bis hin zu Feinkostprodukten und Weinen. Unsere Produkte stammen aus kleinen Manufakturen und werden unter biologischen Gesichtspunkten produziert. Lassen Sie sich von Köstlichkeiten aus den verschiedensten Regionen Italiens begeistern!
 
       </div>
     </div>
@@ -24,11 +24,13 @@
     <div class="uns-flexbox-item">
       <div class="uns-column2">
 
-        <a class="round-picture"><img src="images/regal2.png"/></a>
+        <div class="round-picture">
+          <img src="images/regal2.png"/>
+        </div>
 
         <br>
         <br>
-        Unser Angebot an Produkten wird von ständig wechselnden Themen und Schwerpunkten bestimmt. Täglich frisches Gebäck und eine kleine Auswahl an saisonalem Obst und Gemüse runden unser Sortiment ab, so dass immer Neues und Interessantes unsere Kunden zum Genießen einlädt.
+        Unser Angebot an Produkten wird von ständig wechselnden Themen und saisonalen Schwerpunkten bestimmt, so dass immer Neues und Interessantes unsere Kunden zum Genießen einlädt. Neben täglich frischem Gebäck bieten wir auch eine kleine Auswahl an saisonalem Obst und Gemüse an.
 
         Überzeugen Sie sich selbst und besuchen Sie uns einmal!
 
@@ -40,16 +42,22 @@
     <div class="uns-flexbox-item">
       <div class="uns-column3">
 
-        <a class="round-picture"><img src="images/platte_detail4.png"/></a>
+        <div class="round-picture">
+          <img src="images/platte_detail4.png"/>
+        </div>
 
         <br>
         <br>
-        Eine persönliche und freundliche Bedienung liegt uns sehr am Herzen. Gerne stellen wir für Ihre Familien -oder Firmenfeier Platten mit ausgewählten Produkten zusammen.
+        Eine persönliche und freundliche Bedienung liegt uns sehr am Herzen. Gerne stellen wir für Ihre Familien- oder Firmenfeier Platten mit ausgewählten Produkten zusammen.
         <br>
         <br>
         Für Anfragen und weitere Informationen kontaktieren Sie mich bitte unter:
         <br>
         <a href="tel:{{ site.phone }}"><i class="fa fa-phone"></i> {{ site.phone }}</a>
+        <br>
+        <br>
+        Ihr Enzo Cipolletta
+
 
       </div>
     </div>
