--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -224,12 +224,16 @@
    margin: 0;
    padding: 0;
    width: auto;
-   height: 100vh;
+   height: 1000px;
+   //height: 100vh;
 }
+
+
+
 
 .uns-flexbox-parent {
   //border: 5px solid green;
-  margin-top: 50px;
+  margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
   max-width: 1000px;
@@ -249,6 +253,47 @@
   margin: 10px;
 
 }
+
+// when the screen becomes mobilephonesize, do this:
+@media screen and (max-width: $on-palm) {
+  #ueberuns{
+    height: auto;
+  }
+  
+  .uns-flexbox-parent {
+    //border: 5px solid red;
+  }
+
+  .round-picture {
+    max-width: 250px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .uns-flexbox-item {
+    width: auto;
+    font-size: 16px;
+    margin: 10px;
+  }
+}
+
+
+/**
+ * Anfahrt
+ */
+#anfahrt{
+  //background: $green-color;
+  margin: 0;
+  padding: 0;
+  width: auto;
+}
+
+.image_container {
+  width: 500px;
+
+}
+
+
 
 /**
  * Site footer
@@ -288,6 +333,14 @@
 
 .footer-flexbox-item {
   margin: 10px;
+  max-width: 220px;
+
+}
+
+.footer-flexbox-item:nth-child(1) {
+  margin: 10px;
+  max-width: 200px;
+  align-self: flex-start;
 
 }
 
@@ -310,7 +363,9 @@
 }
 
 .page-heading {
-    font-size: 20px;
+    font-size: 64px;
+    color: $green-color;
+
 }
 
 .post-list {
