added hover effect to über uns images

--- a/_includes/ueberuns.html
+++ b/_includes/ueberuns.html
@@ -1,67 +1,68 @@
 <div id="ueberuns">
+  <div class="wrapper">
 
-  <h1 class="page-heading">Über uns</h1>
+    <h1 class="page-heading">Über uns</h1>
 
-  <div class="uns-flexbox-parent">
+    <div class="uns-flexbox-parent">
 
-    <div class="uns-flexbox-item">
-      <div class="uns-column1">
+      <div class="uns-flexbox-item">
+        <div class="uns-column1">
 
-        <div class="round-picture">
-          <img src="images/enzo_profile.png"/>
+          <div class="round-picture">
+            <img src="images/enzo_profile.png"/>
+          </div>
+
+          <br>
+          <br>
+          Unser italienisches Feinkostgeschäft in Rosegg entstand im Mai 2010.
+
+          Qualitativ hochwertige Produkte bestimmen unsere Palette, vom Wurstbereich über die Käsetheke, bis hin zu Feinkostprodukten und Weinen. Unsere Produkte stammen aus kleinen Manufakturen und werden unter biologischen Gesichtspunkten produziert. Lassen Sie sich von Köstlichkeiten aus den verschiedensten Regionen Italiens begeistern!
+
         </div>
-
-        <br>
-        <br>
-        Unser italienisches Feinkostgeschäft in Rosegg entstand im Mai 2010.
-
-        Qualitativ hochwertige Produkte bestimmen unsere Palette, vom Wurstbereich über die Käsetheke, bis hin zu Feinkostprodukten und Weinen. Unsere Produkte stammen aus kleinen Manufakturen und werden unter biologischen Gesichtspunkten produziert. Lassen Sie sich von Köstlichkeiten aus den verschiedensten Regionen Italiens begeistern!
-
       </div>
-    </div>
 
 
-    <div class="uns-flexbox-item">
-      <div class="uns-column2">
+      <div class="uns-flexbox-item">
+        <div class="uns-column2">
 
-        <div class="round-picture">
-          <img src="images/regal2.png"/>
+          <div class="round-picture">
+            <img src="images/regal2.png"/>
+          </div>
+
+          <br>
+          <br>
+          Unser Angebot an Produkten wird von ständig wechselnden Themen und saisonalen Schwerpunkten bestimmt, so dass immer Neues und Interessantes unsere Kunden zum Genießen einlädt. Neben täglich frischem Gebäck bieten wir auch eine kleine Auswahl an saisonalem Obst und Gemüse an.
+
+          Überzeugen Sie sich selbst und besuchen Sie uns einmal!
+
+
         </div>
-
-        <br>
-        <br>
-        Unser Angebot an Produkten wird von ständig wechselnden Themen und saisonalen Schwerpunkten bestimmt, so dass immer Neues und Interessantes unsere Kunden zum Genießen einlädt. Neben täglich frischem Gebäck bieten wir auch eine kleine Auswahl an saisonalem Obst und Gemüse an.
-
-        Überzeugen Sie sich selbst und besuchen Sie uns einmal!
-
-
       </div>
-    </div>
 
 
-    <div class="uns-flexbox-item">
-      <div class="uns-column3">
+      <div class="uns-flexbox-item">
+        <div class="uns-column3">
 
-        <div class="round-picture">
-          <img src="images/platte_detail4.png"/>
+          <div class="round-picture">
+            <img src="images/platte_detail4.png"/>
+          </div>
+
+          <br>
+          <br>
+          Eine persönliche und freundliche Bedienung liegt uns sehr am Herzen. Gerne stellen wir für Ihre Familien- oder Firmenfeier Platten mit ausgewählten Produkten zusammen.
+          <br>
+          <br>
+          Für Anfragen und weitere Informationen kontaktieren Sie mich bitte unter:
+          <br>
+          <a href="tel:{{ site.phone }}"><i class="fa fa-phone"></i> {{ site.phone }}</a>
+          <br>
+          <br>
+          Ihr Enzo Cipolletta
+
+
         </div>
-
-        <br>
-        <br>
-        Eine persönliche und freundliche Bedienung liegt uns sehr am Herzen. Gerne stellen wir für Ihre Familien- oder Firmenfeier Platten mit ausgewählten Produkten zusammen.
-        <br>
-        <br>
-        Für Anfragen und weitere Informationen kontaktieren Sie mich bitte unter:
-        <br>
-        <a href="tel:{{ site.phone }}"><i class="fa fa-phone"></i> {{ site.phone }}</a>
-        <br>
-        <br>
-        Ihr Enzo Cipolletta
-
-
       </div>
+
     </div>
-
-  </div>
-
+  </div>  
 </div>
