--- a/_includes/anfahrt.html
+++ b/_includes/anfahrt.html
@@ -1,10 +1,10 @@
 <div id="anfahrt">
 
-  <h1 class="page-heading">Anfahrt</h1>
+  <h1 class="page-heading"></h1>
 
   <div class="image_container">
     <a href="https://www.google.at/maps/place/Il+Gusto/@46.5922111,14.0174463,17z/data=!4m7!1m4!3m3!1s0x477078af0747afeb:0x83a247888773d752!2sMautweg+7,+9232+Rosegg!3b1!3m1!1s0x477078af06f0728f:0x8452d9ac2dc6edc9?hl=en">
-      <img class="map_image" src="images/map.png">
+      <img class="map_image" src="images/map_long.png">
     </a>
   </div>
 
