--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
 
     <div class="footer-flexbox-parent">
 
-
       <div class="footer-flexbox-item">
+
         <img src="images/logo_ganz.png">
       </div>
 
@@ -23,14 +23,9 @@
               </a>
             </li>
             <li>{{ site.uid }}</li>
-          </ul>
-        </div>
-      </div>
 
+            <br>
 
-      <div class="footer-flexbox-item">
-        <div class="footer-col-2">
-          <ul class="contact-list">
             <li>
               {{ site.name }}
             </li>
@@ -42,8 +37,7 @@
             </li>
             <li>
               <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
-                <i class="fa fa-rss-square"></i> RSS-Feed
-              </a>
+                <i class="fa fa-rss-square"></i> RSS-Feed</a>
             </li>
           </ul>
         </div>
@@ -51,7 +45,7 @@
 
 
       <div class="footer-flexbox-item">
-        <div class="footer-col-3">
+        <div class="footer-col-2">
           <ul class="contact-list">
             <li>{{ site.opening_hours.title }}</li>
             <li>{{ site.opening_hours.mo.title }} : {{ site.opening_hours.mo.hours }} </li>
@@ -65,7 +59,5 @@
       </div>
 
     </div>
-
   </div>
-
 </footer>
