--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -254,12 +254,24 @@
 
 }
 
+.round-picture {
+  opacity: 1;
+  transition: opacity 2s; /* explorer 10 */
+  -webkit-transition: opacity 2s; /* chrome & safari */
+  -moz-transition: opacity 2s; /* firefox */
+  -o-transition: opacity 2s;
+}
+
+.round-picture:hover {
+  opacity: 0.7;
+}
+
 // when the screen becomes mobilephonesize, do this:
 @media screen and (max-width: $on-palm) {
   #ueberuns{
     height: auto;
   }
-  
+
   .uns-flexbox-parent {
     //border: 5px solid red;
   }
@@ -268,6 +280,7 @@
     max-width: 250px;
     margin-left: auto;
     margin-right: auto;
+
   }
 
   .uns-flexbox-item {
@@ -281,17 +294,28 @@
 /**
  * Anfahrt
  */
+
 #anfahrt{
-  //background: $green-color;
+  background: $green-color;
   margin: 0;
   padding: 0;
   width: auto;
 }
 
+
 .image_container {
-  width: 500px;
+  width: 100%;
+  padding: 0;
+  margin: 0;
 
 }
+
+
+
+/**
+ * Gallery
+ */
+
 
 
 
@@ -300,9 +324,9 @@
  */
 
 .site-footer {
-    border-top: 1px solid $green-color;
+    border-top: 3px solid $green-color;
     padding: $spacing-unit 0;
-    background: $grey-color-light;
+    //background: $grey-color-light;
 }
 
 .footer-heading {
