--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,5 +1,17 @@
 <div id="gallery">
 
-  <img class="testimage" src="images/regal1_low.png"/>
-
+  <div class="gallery-flexbox-parent">
+    <img class="galleryimage" src="images/gallery/1_platte.png"/>
+    <img class="galleryimage" src="images/gallery/2_montasio.png"/>
+    <img class="galleryimage" src="images/gallery/3_olio.png"/>
+    <img class="galleryimage" src="images/gallery/4_brot.png"/>
+    <img class="galleryimage" src="images/gallery/5_mortadella.png"/>
+    <img class="galleryimage" src="images/gallery/6_pasta.png"/>
+    <img class="galleryimage" src="images/gallery/7_aceto.png"/>
+    <img class="galleryimage" src="images/gallery/8_semmel.png"/>
+    <img class="galleryimage" src="images/gallery/9_salami.png"/>
+    <img class="galleryimage" src="images/gallery/10_mandarinen.png"/>
+    <img class="galleryimage" src="images/gallery/11_aioli.png"/>
+    <img class="galleryimage" src="images/gallery/12_körbe.png"/>
+  </div>
 </div>
