--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -224,12 +224,9 @@
    margin: 0;
    padding: 0;
    width: auto;
-   height: 1000px;
+   height: auto;
    //height: 100vh;
 }
-
-
-
 
 .uns-flexbox-parent {
   //border: 5px solid green;
@@ -316,8 +313,30 @@
  * Gallery
  */
 
+#gallery{
+  background: $grey-color-light
+}
+
+.gallery-flexbox-parent {
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1000px;
+  //margin: 0 auto;
+  //z-index: 2;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+	flex-wrap: wrap;
 
 
+}
+
+.galleryimage {
+  padding: 10px;
+  width: 300px;
+}
 
 /**
  * Site footer
