fixed library and added hover changes

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,17 +1,53 @@
 <div id="gallery">
 
+  <h1></h1>
   <div class="gallery-flexbox-parent">
-    <img class="galleryimage" src="images/gallery/1_platte.png"/>
-    <img class="galleryimage" src="images/gallery/2_montasio.png"/>
-    <img class="galleryimage" src="images/gallery/3_olio.png"/>
-    <img class="galleryimage" src="images/gallery/4_brot.png"/>
-    <img class="galleryimage" src="images/gallery/5_mortadella.png"/>
-    <img class="galleryimage" src="images/gallery/6_pasta.png"/>
-    <img class="galleryimage" src="images/gallery/7_aceto.png"/>
-    <img class="galleryimage" src="images/gallery/8_semmel.png"/>
-    <img class="galleryimage" src="images/gallery/9_salami.png"/>
-    <img class="galleryimage" src="images/gallery/10_mandarinen.png"/>
-    <img class="galleryimage" src="images/gallery/11_aioli.png"/>
-    <img class="galleryimage" src="images/gallery/12_körbe.png"/>
+
+    <div class="gallery-flexbox-item">
+      <img class="galleryimage" src="images/gallery/1_platte.png"/>
+      <h3 class="gallery-image-title">Parmigiano reggiano</h3>
+    </div>
+
+    <div class="gallery-flexbox-item">
+      <img class="galleryimage" src="images/gallery/2_montasio.png"/>
+      <h3 class="gallery-image-title">Montasio - Latteria</h3>
+    </div>
+
+    <div class="gallery-flexbox-item">
+      <img class="galleryimage" src="images/gallery/3_olio.png"/>
+      <h3 class="gallery-image-title">Olivenöl</h3>
+    </div>
+
+    <div class="gallery-flexbox-item">
+      <img class="galleryimage" src="images/gallery/8_semmel.png"/>
+      <h3 class="gallery-image-title">Posciutto crudo/cotto</h3>
+    </div>
+
+    <div class="gallery-flexbox-item">
+      <img class="galleryimage" src="images/gallery/5_mortadella.png"/>
+      <h3 class="gallery-image-title">Mortadella</h3>
+    </div>
+
+    <div class="gallery-flexbox-item">
+      <img class="galleryimage" src="images/gallery/6_pasta.png"/>
+      <h3 class="gallery-image-title">Pasta</h3>
+    </div>
+
+    <div class="gallery-flexbox-item">
+      <img class="galleryimage" src="images/gallery/7_aceto.png"/>
+      <h3 class="gallery-image-title">Aceto balsamico</h3>
+    </div>
+
+    <div class="gallery-flexbox-item">
+      <img class="galleryimage" src="images/gallery/4_brot.png"/>
+      <h3 class="gallery-image-title">Frisches Gebäck</h3>
+    </div>
+
+    <div class="gallery-flexbox-item">
+      <img class="galleryimage" src="images/gallery/9_salami.png"/>
+      <h3 class="gallery-image-title">Salami</h3>
+    </div>
+
+
   </div>
 </div>
