--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,7 +3,7 @@
  */
 .site-header {
     // border-top: 5px solid $grey-color-dark;
-    // border-bottom: 5px solid red; //$grey-color-light;
+    // border-bottom: 5px solid red;
     margin: 0;
     padding: 0;
     width: auto;
@@ -294,9 +294,14 @@
 
 #anfahrt{
   background: $green-color;
-  margin: 0;
+  margin-top: 50px;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0;
+
   padding: 0;
   width: auto;
+  height: auto;
 }
 
 
@@ -314,30 +319,79 @@
  */
 
 #gallery{
-  background: $grey-color-light
+  height: auto;
 }
 
 .gallery-flexbox-parent {
-  margin-top: 50px;
+  //border: 5px solid red;
+  margin-top: 80px;
+  margin-bottom: 80px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 1000px;
-  //margin: 0 auto;
-  //z-index: 2;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
-	flex-wrap: wrap;
+  width: 100%;
 
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
+.gallery-flexbox-item{
+  //border: 5px solid blue;
+  width: 320px;
+  height: 180px;
+  margin: 10px;
+  overflow: hidden;
 }
 
 .galleryimage {
-  padding: 10px;
-  width: 300px;
+	width: auto;
+  z-index: 1;
+
+	transform: translate3d(0, 0, 0) scale3d(1.3, 1.3, 1);
+  transition: transform 0.5s; /* explorer 10 */
+  -webkit-transition: transform 0.5s; /* chrome & safari */
+  -moz-transition: transform 0.5s; /* firefox */
+  -o-transition: transform 0.5s;
 }
 
+.gallery-image-title {
+  z-index: 2;
+	bottom: 0;
+	margin: 0;
+	padding: 1em;
+	color: white;
+	font-size: 1.2em;
+	line-height: 1;
+  opacity: 0;
+  transform: translate3d(3%, 0, 0);
+	transition: transform 0.4s, opacity 2s;
+  -webkit-transition: transform 0.4s, opacity 2s; /* chrome & safari */
+  -moz-transition: transform 0.4s, opacity 2s; /* firefox */
+  -o-transition: transform 0.4s, opacity 2s;
+}
+
+.gallery-flexbox-item:hover {
+  .galleryimage {
+  transform: translate3d(0, 0, 0);
+  }
+  .gallery-image-title {
+  opacity: 1;
+	transform: translate3d(3%,-100%, 0);
+  }
+}
+
+// when the screen becomes mobilephonesize, do this:
+@media screen and (max-width: $on-palm) {
+  .gallery-flexbox-item:nth-child(7) {
+    display: none;
+  }
+  .gallery-flexbox-item:nth-child(8) {
+    display: none;
+  }
+  .gallery-flexbox-item:nth-child(9) {
+    display: none;
+  }
+}
 /**
  * Site footer
  */
@@ -345,7 +399,7 @@
 .site-footer {
     border-top: 3px solid $green-color;
     padding: $spacing-unit 0;
-    //background: $grey-color-light;
+
 }
 
 .footer-heading {
