started fixing header for mobile view

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     <div class="header-flexbox-parent">
 
       <div class="header-flexbox-item">
-        <a class="site-title" href="{{ site.baseurl }}/"><img src="images/logo_rot.png" width=300 height=86 /></a>
+        <a class="site-title" href="{{ site.baseurl }}/"><img class="header-logo" src="images/logo_rot.png"/></a>
       </div>
 
       <div class="header-flexbox-item">
