--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -19,9 +19,9 @@
 .site-title {
     position: relative;
     z-index: 2;
-    font-size: 26px;
-    line-height: 56px;
-    letter-spacing: -1px;
+    //font-size: 26px;
+    //line-height: 64px;
+    //letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
 
@@ -31,11 +31,16 @@
     }
 }
 
+.header-logo {
+  width: 300px;
+
+}
+
 .site-nav {
     position: relative;
     z-index: 2;
     float: right;
-    line-height: 56px;
+    //line-height: 20px;
 
     .menu-icon {
         display: none;
@@ -48,50 +53,6 @@
         // Gaps between nav items, but not on the first one
         &:not(:first-child) {
             margin-left: 20px;
-        }
-    }
-
-    @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: 30px;
-        //background-color: $background-color;
-        //border: 1px solid white;
-        border-radius: 5px;
-        text-align: right;
-
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
-
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $navbarcolor;
-                }
-            }
-        }
-
-        .trigger {
-            clear: both;
-            display: none;
-        }
-
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
-        }
-
-        .page-link {
-            display: block;
-            padding: 5px 10px;
         }
     }
 }
@@ -109,9 +70,12 @@
 
 }
 
+.landing-video-box{
+  overflow: hidden;
+}
+
 .landing-video {
   position: absolute;
-  overflow: hidden;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -124,7 +88,7 @@
 }
 
 .header-flexbox-parent {
-  //border: 5px solid lightblue;
+  border: 5px solid lightblue;
   position: absolute;
   margin-top: 20px;
   margin-left: 20px;
@@ -137,7 +101,70 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   flex-wrap: wrap;
+}
+
+//@include media-query($on-palm)
+@media screen and (max-width: $on-palm) {
+
+  .header-flexbox-parent {
+    max-width: 350px;
+    height: auto;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .header-logo {
+      width: 200px;
+
+    }
+
+  .site-nav {
+    position: relative;
+    //top: 9px;
+    //right: 30px;
+    //background-color: $background-color;
+    //border: 1px solid white;
+    border-radius: 5px;
+    text-align: right;
+
+      .menu-icon {
+          display: block;
+          float: right;
+          width: 72px;
+          height: 52px;
+          line-height: 0;
+          padding-top: 10px;
+          text-align: right;
+
+          > svg {
+              width: 30px;
+              height: 25px;
+
+              path {
+                  fill: $navbarcolor;
+              }
+          }
+      }
+
+      .trigger {
+          clear: both;
+          display: none;
+      }
+
+      &:hover .trigger {
+          display: block;
+          padding-bottom: 5px;
+      }
+
+      .page-link {
+          display: block;
+          padding: 5px 10px;
+      }
+  }
 
 }
 
@@ -222,7 +249,8 @@
 
  #ueberuns{
    margin: 0;
-   padding: 0;
+   padding-top: 50px;
+   padding-bottom: 0;
    width: auto;
    height: auto;
    //height: 100vh;
@@ -328,7 +356,7 @@
   margin-bottom: 80px;
   margin-left: auto;
   margin-right: auto;
-  width: 100%;
+  max-width: 1500px;
 
   display:flex;
   flex-wrap: wrap;
@@ -337,10 +365,11 @@
 
 .gallery-flexbox-item{
   //border: 5px solid blue;
-  width: 320px;
-  height: 180px;
+  width: 480px;
+  height: 270px;
   margin: 10px;
   overflow: hidden;
+
 }
 
 .galleryimage {
