--- a/_includes/landing_page.html
+++ b/_includes/landing_page.html
@@ -2,10 +2,15 @@
 
 
   <video class="landing-video" poster="images/enzo.png" autoplay="true" muted>
-    <source src="videos/Landing_video_short.mp4" type="video/mp4">
-    <source src="videos/Landing_video_short.webm" type="video/webm">
+    <source src="videos/Landing_ video_short.mp4" type="video/mp4">
+    <source src="videos/Landing_ video_short.webm" type="video/webm">
   </video>
 
+  <div class="background-mobile">
+    <img class="bottom-image" src="images/enzo.png"/>
+    <img class="top-image1" src="images/gallery/1_platte.png"/>
+    <img class="top-image2" src="images/gallery/2_montasio.png"/>
+  </div>
 
   <div class="video-flexbox-parent">
 
