--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -88,7 +88,7 @@
 }
 
 .header-flexbox-parent {
-  border: 5px solid lightblue;
+  //border: 5px solid lightblue;
   position: absolute;
   margin-top: 20px;
   margin-left: 20px;
@@ -109,7 +109,7 @@
 @media screen and (max-width: $on-palm) {
 
   .header-flexbox-parent {
-    max-width: 350px;
+    max-width: 300px;
     height: auto;
     flex-direction: row;
     flex-wrap: wrap;
@@ -118,7 +118,7 @@
   }
 
   .header-logo {
-      width: 200px;
+      width: 180px;
 
     }
 
@@ -224,6 +224,10 @@
 
 }
 
+.background-mobile {
+  display: none;
+}
+
 // when the screen becomes mobilephonesize, do this:
 @media screen and (max-width: $on-palm) {
   .video-flexbox-parent {
@@ -233,12 +237,41 @@
 
   }
 
+  .landing-video{
+    display: none;
+  }
+
   .video-flexbox-item:nth-child(1) {
-    align-self: flex-start;
+    align-self: center;
 
     margin-left: 0;
     padding-left: 0;
 
+  }
+
+  .background-mobile {
+    display: flex;
+    z-index: 1;
+  }
+
+  .bottom-image {
+    position: absolute;
+    margin-top: 80px;
+    z-index: 1;
+  }
+
+  .top-image1 {
+    position: absolute;
+    margin-top: 80px;
+    width: 100%;
+    z-index: 2;
+  }
+
+  .top-image2 {
+    position: absolute;
+    margin-top: 80px;
+    width: 100%;
+    z-index: 2;
   }
 
 }
