--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,6 +25,7 @@
               <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
               {% endif %}
             {% endfor %} -->
+            <a class="page-link" href="#landing_page"> Home</a>
             <a class="page-link" href="#ueberuns"> Über uns</a>
             <a class="page-link" href="#anfahrt"> Anfahrt</a>
             <a class="page-link" href="#kontakt"> Kontakt</a>
