--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,9 +12,7 @@
 
     // Positioning context for the mobile navigation icon
     position: relative;
-
 }
-
 
 .site-title {
     position: relative;
@@ -65,6 +63,7 @@
 #landing_page{
   margin: 0;
   padding: 0;
+  border: 0;
   width: auto;
   height: 100vh;
 
@@ -75,7 +74,8 @@
 }
 
 .landing-video {
-  position: absolute;
+   /*position: absolute; for making landing video scrollable */
+  position: fixed; /*for making landing video fixed and pages move over it*/
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -83,7 +83,7 @@
   min-height: 90%;
   width: auto;
   height: auto;
-  z-index: 1;
+  z-index: -1;  /*moves landing page vidoe into the background so rest of website scrolls over it*/
 
 }
 
@@ -123,7 +123,7 @@
     }
 
   .site-nav {
-    position: relative;
+    position: left;
     //top: 9px;
     //right: 30px;
     //background-color: $background-color;
@@ -168,6 +168,7 @@
 
 }
 
+
 .video-flexbox-parent {
   //border: 5px solid lightgreen;
   position: absolute;
@@ -187,23 +188,6 @@
   margin-left:auto;
 
 }
-
-.overlay-text {
-  position: relative;
-  z-index: 2;
-  background: rgba(200,200,200,0.8);
-  padding-top: 30px;
-  padding-bottom: 20px;
-  padding-left: 15px;
-  padding-right: 45px;
-  font-size: 20px;
-
-}
-
-.overlay-text-list {
-  list-style: none;
-}
-
 
 .chevron-flexbox-parent {
   //border: 5px solid lightgreen;
@@ -276,17 +260,76 @@
 
 }
 
+
+/**
+ * oeffnungszeiten
+ */
+
+ #oeffnungszeiten{
+   //border: 5px solid red;
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-color: green;
+   background-position: center 0;
+   margin: 0;
+   padding-top: 50px;
+   padding-bottom: 50px;
+   width: auto;
+   height: auto;
+   //height: 100vh;
+}
+
+.oeffnungszeiten-flexbox-parent {
+  //border: 5px solid blue;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.overlay-text {
+  width: 350px;
+  position: relative;
+  z-index: 2;
+  background: rgba(250,250,250,0.8);
+  padding-top: 30px;
+  padding-bottom: 20px;
+  //padding-left: 15px;
+  //padding-right: 45px;
+  font-size: 20px;
+
+}
+
+.overlay-text-list {
+  list-style: none;
+}
+
+
 /**
  * Ueber uns
  */
 
  #ueberuns{
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-color: white;
+   background-position: center 0;
    margin: 0;
    padding-top: 50px;
    padding-bottom: 0;
    width: auto;
    height: auto;
    //height: 100vh;
+}
+
+.page-heading{
+  //border: 5px solid green;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1000px;
 }
 
 .uns-flexbox-parent {
@@ -370,7 +413,6 @@
   width: 100%;
   padding: 0;
   margin: 0;
-
 }
 
 
@@ -459,9 +501,9 @@
  */
 
 .site-footer {
-    border-top: 3px solid $green-color;
-    padding: $spacing-unit 0;
-
+  background-color: white;
+  border-top: 3px solid $green-color;
+  padding: $spacing-unit 0;
 }
 
 .footer-heading {
@@ -502,6 +544,13 @@
   align-self: flex-start;
 
 }
+
+.image_container {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
 
 @include media-query($on-palm) {
     .footer-flexbox-parent {
