--- a/_includes/landing_page.html
+++ b/_includes/landing_page.html
@@ -1,7 +1,7 @@
 <div id="landing_page">
 
 
-  <video class="landing-video" poster="images/enzo.png" autoplay="true" muted>
+  <video class="landing-video" poster="images/Cover2.png" autoplay="true" muted>
     <source src="videos/Landing_video_short.mp4" type="video/mp4">
     <source src="videos/Landing_video_short.webm" type="video/webm">
   </video>
