--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -270,7 +270,7 @@
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
-   background-color: green;
+   background-color: rgba(250,250,250,0.7);
    background-position: center 0;
    margin: 0;
    padding-top: 50px;
@@ -293,7 +293,7 @@
   width: 350px;
   position: relative;
   z-index: 2;
-  background: rgba(250,250,250,0.8);
+  background: rgba(250,250,250,1);
   padding-top: 30px;
   padding-bottom: 20px;
   //padding-left: 15px;
