--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,8 +26,9 @@
               {% endif %}
             {% endfor %} -->
             <a class="page-link" href="#landing_page"> Home</a>
+            <a class="page-link" href="#oeffnungszeiten"> Öffnungszeiten</a>
             <a class="page-link" href="#ueberuns"> Über uns</a>
-            <a class="page-link" href="#anfahrt"> Anfahrt</a>
+            <a class="page-link" href="#kontakt"> Anfahrt</a>
             <a class="page-link" href="#kontakt"> Kontakt</a>
           </div>
         </nav>
