--- a/_includes/landing_page.html
+++ b/_includes/landing_page.html
@@ -7,9 +7,7 @@
   </video>
 
   <div class="background-mobile">
-    <img class="bottom-image" src="images/enzo.png"/>
-    <img class="top-image1" src="images/gallery/1_platte.png"/>
-    <img class="top-image2" src="images/gallery/2_montasio.png"/>
+    <img class="bottom-image" src="images/Cover2.png"/>
   </div>
 
   <div class="chevron-flexbox-parent">
