--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -319,7 +319,7 @@
    background-position: center 0;
    margin: 0;
    padding-top: 50px;
-   padding-bottom: 0;
+   padding-bottom: 50px;
    width: auto;
    height: auto;
    //height: 100vh;
@@ -422,17 +422,22 @@
  */
 
 #gallery{
+  border: 5px solid blue;
   height: auto;
+  padding-top: 50px;
+  padding-bottom: 80px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: rgba(250,250,250,0.7);
+  background-position: center 0;
 }
 
 .gallery-flexbox-parent {
   //border: 5px solid red;
-  margin-top: 80px;
-  margin-bottom: 80px;
   margin-left: auto;
   margin-right: auto;
   max-width: 1500px;
-
   display:flex;
   flex-wrap: wrap;
   justify-content: center;
