--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -422,14 +422,14 @@
  */
 
 #gallery{
-  border: 5px solid blue;
+  //border: 5px solid blue;
   height: auto;
   padding-top: 50px;
   padding-bottom: 80px;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-color: rgba(250,250,250,0.7);
+  background-color: rgba(250,250,250,0.8);
   background-position: center 0;
 }
 
@@ -508,7 +508,8 @@
 .site-footer {
   background-color: white;
   border-top: 3px solid $green-color;
-  padding: $spacing-unit 0;
+
+  //padding: $spacing-unit 0;
 }
 
 .footer-heading {
@@ -524,36 +525,37 @@
 }
 
 .footer-flexbox-parent {
-  //border: 5px solid green;
+  //border: 5px solid red;
   margin-left: 20px;
-  max-width: 900px;
+  max-width: 800px;
   margin: 0 auto;
   //z-index: 2;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: baseline;
   flex-wrap: wrap;
 
 }
 
 .footer-flexbox-item {
-  margin: 10px;
-  max-width: 220px;
+  //border: 5px solid green;
+  margin-top: 40px;
+  max-width: 250px;
 
 }
 
 .footer-flexbox-item:nth-child(1) {
-  margin: 10px;
+  //margin: 10px;
   max-width: 200px;
   align-self: flex-start;
 
 }
 
 .image_container {
-  width: 100%;
+  max-width: 800px;
   padding: 0;
-  margin: 0;
+  margin-top: 20px;
 }
 
 
@@ -572,7 +574,7 @@
  * Page content
  */
 .page-content {
-    padding: $spacing-unit 0;
+    padding: 0;
 }
 
 .page-heading {
