change gallery images

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -5,12 +5,12 @@
 
     <div class="gallery-flexbox-item">
       <img class="galleryimage" src="images/gallery/1_platte.png"/>
-      <h3 class="gallery-image-title">Parmigiano reggiano</h3>
+      <h3 class="gallery-image-title">Italienische Jause</h3>
     </div>
 
     <div class="gallery-flexbox-item">
       <img class="galleryimage" src="images/gallery/2_montasio.png"/>
-      <h3 class="gallery-image-title">Montasio - Latteria</h3>
+      <h3 class="gallery-image-title">Parmigiano reggiano - Montasio -            Latteria - Dolce Latte</h3>
     </div>
 
     <div class="gallery-flexbox-item">
@@ -20,17 +20,12 @@
 
     <div class="gallery-flexbox-item">
       <img class="galleryimage" src="images/gallery/8_semmel.png"/>
-      <h3 class="gallery-image-title">Posciutto crudo/cotto</h3>
+      <h3 class="gallery-image-title">Frisches Gebäck</h3>
     </div>
 
     <div class="gallery-flexbox-item">
       <img class="galleryimage" src="images/gallery/5_mortadella.png"/>
-      <h3 class="gallery-image-title">Mortadella</h3>
-    </div>
-
-    <div class="gallery-flexbox-item">
-      <img class="galleryimage" src="images/gallery/6_pasta.png"/>
-      <h3 class="gallery-image-title">Pasta</h3>
+      <h3 class="gallery-image-title">Prosciutto - Mortadella - Salami</h3>
     </div>
 
     <div class="gallery-flexbox-item">
@@ -39,8 +34,13 @@
     </div>
 
     <div class="gallery-flexbox-item">
-      <img class="galleryimage" src="images/gallery/4_brot.png"/>
-      <h3 class="gallery-image-title">Frisches Gebäck</h3>
+      <img class="galleryimage" src="images/gallery/13_wein.png"/>
+      <h3 class="gallery-image-title">Italienische Weine</h3>
+    </div>
+    
+    <div class="gallery-flexbox-item">
+      <img class="galleryimage" src="images/gallery/6_pasta.png"/>
+      <h3 class="gallery-image-title">Pasta</h3>
     </div>
 
   </div>
