--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -464,6 +464,7 @@
 }
 
 .gallery-image-title {
+  width: 400px;
   z-index: 2;
 	bottom: 0;
 	margin: 0;
@@ -506,6 +507,7 @@
  */
 
 .site-footer {
+  padding-bottom: 20px;
   background-color: white;
   border-top: 3px solid $green-color;
 
